# oracle-materialized-view-log-poc

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
infra/: .terraform.lock.hcl  main.tf
notebooks/: oracle-materialized-view-log-poc.ipynb
