[project]
name = "oracle-materialized-view-log-poc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "William Phetsinorath", email = "william.phetsinorath@shikanime.studio"},
]
dependencies = [
    "jupysql>=0.10.10",
    "oracledb>=2.2.1",
    "toml>=0.10.2",
    "jupyterlab>=4.2.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "None"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.jupysql.SqlMagic]
feedback = false
autopandas = true
